@@ -284,9 +284,12 @@ typedef unsigned int u_int32_t;	/* XXX Hope this works! */
 #define SNO_TKL        0x0080
 #define SNO_NICKCHANGE 0x0100
 #define SNO_QLINE      0x0200
+#define SNO_SNOTICE    0x0400
 
-#define SNO_DEFOPER "+kcfvGq"
-#define SNO_DEFUSER "+k"
+#define SNO_DEFOPER "+kscfvGq"
+#define SNO_DEFUSER "+ks"
+
+#define SNO_NONOPERS (SNO_KILLS | SNO_SNOTICE)
 
 #define	SEND_UMODES (UMODE_INVISIBLE|UMODE_OPER|UMODE_WALLOP|UMODE_FAILOP|UMODE_HELPOP|UMODE_RGSTRONLY|UMODE_REGNICK|UMODE_SADMIN|UMODE_NETADMIN|UMODE_COADMIN|UMODE_ADMIN|UMODE_SERVICES|UMODE_HIDE|UMODE_WHOIS|UMODE_KIX|UMODE_BOT|UMODE_SECURE|UMODE_HIDING|UMODE_DEAF|UMODE_VICTIM|UMODE_HIDEOPER|UMODE_SETHOST|UMODE_STRIPBADWORDS|UMODE_WEBTV)
 #define	ALL_UMODES (SEND_UMODES|UMODE_SERVNOTICE|UMODE_LOCOP|UMODE_SERVICES)
@@ -340,7 +343,7 @@ typedef unsigned int u_int32_t;	/* XXX Hope this works! */
 #define	IsPerson(x)		((x)->user && IsClient(x))
 #define	IsPrivileged(x)		(IsAnOper(x) || IsServer(x))
 #define	SendWallops(x)		(!IsMe(x) && ((x)->umodes & UMODE_WALLOP))
-#define	SendServNotice(x)	((x)->umodes & UMODE_SERVNOTICE)
+#define	SendServNotice(x)	((x)->user->snomask & SNO_SNOTICE)
 #define	IsListening(x)		((x)->flags & FLAGS_LISTEN)
 #define	DoAccess(x)		((x)->flags & FLAGS_CHKACCESS)
 #define	IsLocal(x)		((x)->flags & FLAGS_LOCAL)
